# Loop-Engineering

./: .gitignore  CONTRIBUTING.md  FRAMEWORK.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  setup.ps1  setup.sh  verify.sh
python/: README.md  pyproject.toml
python/src/loop_engineering_mcp/: __init__.py  __main__.py  autonomy.py  cli.py  deploy_verify.py  github_client.py  hidden_verify.py  logger.py  loop_executor.py  loop_manager.py  retry.py  scheduler.py  server.py  skill_manager.py  state_manager.py  suitability.py  verification_runner.py  worker.py
python/src/loop_engineering_mcp/checker/: __init__.py  brief.py
python/src/loop_engineering_mcp/checklist/: __init__.py  manager.py
python/src/loop_engineering_mcp/github_ops/: __init__.py  ci_ingest.py  merge_risk.py  pr_review.py
python/src/loop_engineering_mcp/meta/: __init__.py  simulator.py  skill_patch.py
python/src/loop_engineering_mcp/policy/: __init__.py  manager.py
python/src/loop_engineering_mcp/probes/: __init__.py  runner.py
python/src/loop_engineering_mcp/scoring/: __init__.py  les.py  trajectory.py
python/tests/: test_autonomy_gates.py  test_checklist.py  test_ci_ingest.py  test_deploy_verify.py  test_les.py  test_logger.py  test_loop_executor.py  test_policy.py  test_probes.py  test_retry.py  test_scheduler.py  test_simulator.py  test_skill_patch.py  test_state_manager.py  test_suitability.py  test_trajectory.py  test_verification_runner.py
references/: MCP_AUTONOMY_ROADMAP.md  README.md
shared/skills/: ci-triage.md  dependency-updates.md  lint-fixes.md
typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: github-client.ts  index.ts  logger.ts  loop-executor.ts  retry.ts  (+7 more)
(+4 files in other folders)
