[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop"
version = "0.1.0"
description = "MCP server for automated loop engineering in AI coding workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "ai", "coding", "automation", "loop-engineering"]
authors = [
    { name = "Loop Engineering Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/loop-engineering"
Documentation = "https://github.com/yourusername/loop-engineering#readme"
Repository = "https://github.com/yourusername/loop-engineering"
Issues = "https://github.com/yourusername/loop-engineering/issues"

[project.scripts]
loop-mcp = "loop_engineering_mcp.__main__:main"
loop-engineering-worker = "loop_engineering_mcp.worker:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/loop_engineering_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
